--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/pablosoares/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/pablosoares/js-tdd-course#readme"
+  "homepage": "https://github.com/pablosoares/js-tdd-course#readme",
+  "devDependencies": {
+    "eslint": "^4.0.0"
+  }
 }
