npm husky editorconfig

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "biblioteca do curso js com tdd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "greg": "echo 'heeyyy'",
+    "lint": "./node_modules/.bin/eslint src/*.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
   },
   "homepage": "https://github.com/pablosoares/js-tdd-course#readme",
   "devDependencies": {
-    "eslint": "^4.0.0"
+    "eslint": "^4.0.0",
+    "husky": "^0.14.3"
   }
 }
